<resources>
    <string name="app_name">LetsHang</string>
    <string name="login">Login</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Remember">Remember me</string>
    <string name="Register">No account yet? Register here</string>
    <string name="facebook">Continue with facebook</string>
    <string name="language">Change language</string>
    <string name="loginStatus">Login Status</string>
    <string name="loginError">Email or password are not correct</string>
    <string name="createAccount">Create Account</string>
    <string name="UserName">User name</string>
    <string name="Birthday">Birthday</string>
    <string name="createMyAccount">Create my account</string>
    <string name="errorTitle">Error</string>
    <string name="nullStringError">All fields must be filed!</string>
    <string name="emailError">Please enter valid email address</string>
    <string name="facebook_app_id" translatable="false">158358655115910</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb158358655115910</string>
    <string name="correctDetails">My details are correct</string>
    <string name="gender">Gender</string>
    <string-array name="genderChoice">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="menu">Menu</string>
    <string name="account">Account</string>
    <string name="logout">Log Out</string>
    <string name="userAccount">My account</string>
    <string name="changePassword">Change Password</string>
    <string name="oldPassword">Current Password</string>
    <string name="newPassword">New Password</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="currentPasswordError">Current password is wrong</string>
    <string name="newPasswordError">New passwords doesnt match</string>
    <string name="update">Update</string>
    <string name="passwordChanged">Password changed</string>
    <string name="newMeeting">Create New Meeting</string>
    <string name="findMeeting">Find Meeting</string>
    <string name="noMeetings">You are not registered for any meeting</string>
    <string name="Theme">Theme</string>
    <string name="subTheme">Sub theme</string>
    <string-array name="themesChoose">
        <item>Theme</item>
        <item>Computers</item>
        <item>Sport</item>
        <item>Games</item>
        <item>Outdoors</item>
        <item>Trip</item>
        <item>Pets</item>
        <item>Studies</item>
        <item>Other</item>
    </string-array>
    <string name="timeHint">Time</string>
    <string name="date">Date</string>
    <string name="Description">Description....</string>
    <string name="myMeetings">My meetings</string>
    <string name="done">Done</string>
    <string name="MeetingOnlyFor">Meeting only for:</string>
    <string name="afterAge">Over age:</string>
    <string name="belowAge">Under age:</string>
    <string name="place">Place:</string>
    <string name="Creator">Meeting owner:</string>
    <string name="Any">Any</string>
    <string name="betweenAge">Age between:</string>
    <string name="timeSpan">Time span</string>
    <string name="search">Search</string>
    <string name="Place">place</string>
    <string name="startTime">Start time</string>
    <string name="constraints">Joining constraints</string>
    <string name="join">Join</string>
    <string name="leave">Leave meeting</string>
    <string name="members">Members</string>
    <string name="forum">Forum</string>
    <string name="reportingContent">"Report Meeting "</string>
    <string name="delete">Delete meeting</string>
    <string name="noMessages">You have no messages</string>
    <string name="newText">New</string>
    <string name="messageBox">Message Box</string>
    <string name="friendInvate">Friend Invitation</string>
    <string name="friendInvateBody">Friend invitation from:</string>
    <string name="friendSend">Friend invatation sent</string>
    <string name="allreadyFriends">You are allready friends</string>
    <string name="message">Message</string>
    <string name="InvitationSent">Invitation allready sent</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Add">Add</string>
    <string name="toFriends">to friends</string>
    <string name="MyFriends">My Friends</string>
    <string name="noFriends">You don\'t have any friends</string>
    <string name="deleteFriend">Delete this friend?</string>
    <string name="send">Send</string>
    <string name="addFriend">Add friend</string>
    <string name="JoinUs">JOIN US</string>
    <string name="socialNetwork">connect with social network</string>
    <string name="signUp">SIGN UP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Open" translatable="false">Open</string>
    <string name="Close">Close</string>
    <string name="ilegalChar">\"%\" character is not alowd</string>
    <string name="passError">Password must be at least 8 characters long</string>
    <string name="emptyUserName">No user name entered</string>
    <string name="userNameNotExist">User does not exist</string>
    <string name="simpleDelete">Delete</string>
    <string name="repeat">Repeat</string>
    <string name="noMeetinsAtAll">There are no meetings in the app</string>
    <string name="meetingConstrains">Joining Constrains</string>
    <string name="newMeetingLabel">New Meeting</string>
    <string name="meetingDescription">Meeting Description</string>
    <string name="genderAllowd">Gender:</string>
    <string name="InviteFriend">Invite Friend</string>
    <string name="inviteMeetingQuestion">Invite friend to this meeting?</string>
    <string name="MeetingInvitation">Meeting Invitation</string>
    <string name="allreadyFriendMeeting">Yoyr friend is already participating in the meeting</string>
    <string name="AllreadyInvitedMeeting">This friend allready got invitation to this meeting</string>
    <string name="Notification">Notification</string>
    <string name="invitedToMeeting">Friend invited to meeting</string>
    <string name="goToMeeting">Show Meeting</string>
    <string name="friend">Friend</string>
    <string name="InvitedYou">invited you to meeting</string>
    <string-array name="ReportUserChoose">
        <item>Pretending to be someone</item>
        <item>Fake account</item>
        <item>Inappropriate user name</item>
        <item>Posting inappropriate things</item>
        <item>Sent inappropriate message</item>
        <item>Creating fake meetings</item>
        <item>Something else</item>
    </string-array>
    <string-array name="ReportMeetingChoose">
        <item>Fake meeting</item>
        <item>Inappropriate meeting theme</item>
        <item>Inappropriate meeting description</item>
        <item>Inappropriate messages in forum</item>
        <item>Something else</item>
    </string-array>
    <string name="reportSent">Report sent. Thank you for your contribution</string>
    <string name="None">None</string>
    <string name="changeImage">Change Image</string>
    <string name="selectPhoto">Select photo from gallery</string>
    <string name="capturePhoto">" Take a picture"</string>
    <string name="Meeting">MEETING</string>

</resources>
