<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_alert"
    android:padding="16dp">

    <EditText
        android:id="@+id/ThemeText"
        android:layout_width="fill_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"
        android:hint="@string/Theme"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/MessageText"
        android:layout_width="fill_parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/message"
        android:textSize="20sp"
        android:layout_below="@id/ThemeText"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/MessageText"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">
    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:text="@string/send"
        android:background="@drawable/rectangle_button"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/cancel"
        android:background="@drawable/rectangle_button"
        />
    </LinearLayout>


</RelativeLayout>