<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/back_alert">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePassword"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        />

    <EditText
        android:id="@+id/oldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/oldPassword"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorBlack"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/newPassword"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorBlack"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/repeatNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/newPassword"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorBlack"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rectangle_button"/>
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:background="@drawable/rectangle_button"/>
    </LinearLayout>


</LinearLayout>