<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    android:background="@drawable/list_back">


    <TextView
        android:id="@+id/subThemeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/ColorSea"
        android:text="@string/subTheme"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/subThemeText"
        android:padding="10dp"
        android:layout_alignParentLeft="true">

    <TextView
        android:id="@+id/betweenAgeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:text="age"/>
    <TextView
        android:id="@+id/GenderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:text="@string/gender"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_below="@id/subThemeText"
        android:padding="10dp">
    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:text="@string/date"/>
    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:text="time"/>
    <TextView
        android:id="@+id/placeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="@color/colorBlack"
        android:text="@string/place"/>
    </LinearLayout>



</RelativeLayout>