<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_alert">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/headerSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/ReportMeetingChoose"
        android:theme="@style/customStyleSpinner"
        android:textAlignment="center"
        >
    </android.support.v7.widget.AppCompatSpinner>

        <EditText
            android:id="@+id/bodyText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/Description"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">


        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/rectangle_button"
            android:text="@string/cancel"/>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/rectangle_button"
                android:text="@string/send"
                android:layout_marginStart="10dp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>