<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorSea">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/half_round">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:padding="13dp"
            android:background="@drawable/rectangle_shape"
            >

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/colorGray"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/userNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/UserName"
                android:textAlignment="center"
                android:textSize="20sp"
                android:inputType="text"
                android:paddingTop="15dp"
                android:textColor="@color/colorGray"
                />

            <EditText
                android:id="@+id/userBirthdayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Birthday"
                android:textAlignment="center"
                android:textSize="20sp"
                android:inputType="date"
                android:paddingTop="15dp"
                android:focusable="false"
                android:onClick="onClickPickDate"
                android:textColor="@color/colorGray"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/userGenderSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/genderChoice"
                android:theme="@style/Spinner"
                android:textAlignment="center">
            </android.support.v7.widget.AppCompatSpinner>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/lightGray"/>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:textAlignment="center"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:paddingTop="15dp"
                android:focusable="false"
                android:textColor="@color/colorGray"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_button"
            android:layout_below="@id/linearLayout"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:onClick="onClickSignUp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUp"
                android:layout_centerInParent="true"
                android:textColor="#ffffff"
                android:textSize="20sp"
                />

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>