<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userAccount"
    android:background="@drawable/login_background">

    <fragment
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="project.letshang.userMenuFragment"/>

    <TextView
        android:id="@+id/userAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userAccount"
        android:layout_below="@id/menu"
        android:paddingTop="20dp"
        android:layout_centerInParent="true"
        android:textSize="40sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userAccountText"
        android:paddingTop="40dp"
        android:orientation="vertical"
       >

        <LinearLayout
            android:id="@+id/userNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/UserName"
                android:textSize="15sp"
                android:layout_marginStart="50dp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/userName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:textColor="@color/colorGray"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Birthday"
                android:textSize="15sp"
                android:layout_marginStart="50dp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/userBirthday"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:textColor="@color/colorGray"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="15sp"
                android:layout_marginStart="50dp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/userGender"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:textColor="@color/colorGray"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textSize="15sp"
                android:layout_marginStart="50dp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:textColor="@color/colorGray"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="30dp"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:textSize="15sp"
                android:layout_marginStart="50dp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/password"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:textColor="@color/colorBlack"
                android:text="*********"
                android:onClick="onClickChangePassword"
                />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>