<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/back_alert">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="20dp">

    <TextView
        android:id="@+id/bodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="body"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/colorBlack"
        />

        <Button
            android:id="@+id/goToMeetingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_button"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/goToMeeting"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_button"
                android:textSize="20sp"
                android:padding="10dp"
                android:text="@string/cancel"
                android:layout_marginEnd="10dp"/>
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_button"
                android:textSize="20sp"
                android:padding="10dp"
                android:text="@string/simpleDelete"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>